cabal-version:      3.0
name:               text-game
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Patrick Aldis
maintainer:         patricktaldis@gmail.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable text-game
    import:           warnings
    main-is:          Main.hs
    other-modules:
      Game.Types
    -- other-extensions:
    build-depends:    base,
                      vty,
                      reflex,
                      reflex-vty,
                      text
    hs-source-dirs:   src
    default-language: GHC2024
    ghc-options: -threaded
